[FD-953] Fixed centered logo on mobile userbar

--- a/site/orzoro/assets/stylesheets/orzoro/blocks/_navbar.scss
+++ b/site/orzoro/assets/stylesheets/orzoro/blocks/_navbar.scss
@@ -113,9 +113,9 @@
   .header__logo{
     display: block;
     position: absolute;
-    left: 30%;
-    top: 0;
-    max-width:130px;
+    left: 50%;
+    max-width: 130px;
+    margin-left: -70px;
   }
   
 }
